🎉auto update by Gmeek action

--- a/backup/2025.09.07湖科大每日一题.md
+++ b/backup/2025.09.07湖科大每日一题.md
@@ -6,7 +6,7 @@ DHCP REQUEST：此报文用于以下三种用途
 客户端重启初始化后，发送广播的 DHCP REQUEST 报文来确认先前被分配的 IP 地址等配置信息。
 当客户端已经和某个 IP 地址绑定后，发送 DHCP REQUEST 报文来延长 IP 地址的租期。
 DHCP ACK：服务器对客户端的 DHCP REQUEST 报文的确认响应报文，客户端收到此报文后，才真正获得了 IP 地址和相关的配置信息。
-DHCP NACK：服务器对客户端的 DHCP REQUEST 报文的拒绝响应报文，比如服务器对客户端分配的 IP 地址已超过使用租借期限（服务器没有找到相应的租约记录）或者由于某些原因无法正常分配 IP 地址，则发送 DHCP NAK 报文作为应答（客户端移到了另一个新的网络）。
+DHCP NACK：服务器对客户端的 DHCP REQUEST 报文的拒绝响应报文，比如服务器对客户端分配的 IP 地址已超过使用租借期限（服务器没有找到相应的租约记录）或者由于某些原因无法正常分配 IP 地址，则发送 DHCP NACK 报文作为应答（客户端移到了另一个新的网络）。
 通知 DHCP 客户端无法分配合适 IP 地址。DHCP 客户端需要重新发送DHCP DISCOVERY 报文来申请新的 IP 地址。
 DHCP RELEASE：客户端可通过发送此报文主动释放服务器分配给它的 IP 地址，当服务器收到此报文后，可将这个 IP 地址分配给其它的客户端。
 DHCP INFORM：客户端已经获得了 IP 地址，发送此报文的目的是为了从服务器获得其他的一些网络配置信息，比如网关地址、DNS 服务器地址等。
